# localsend-bsd

./: .tasks  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  global.cpp  global.h  main.cpp  recv.cpp  recv.h  self_info.cpp  self_info.h  selfcert.cpp  selfcert.h  send.cpp  send.h  sha.cpp  sha.h  udp.cpp  udp.h
